syntax = "proto3";

package ocf.cloud.pb;

option go_package = "github.com/go-ocf/kit/cqrs/pb;pb";

message AuthorizationContext {
    string user_id = 1;
    string device_id = 2;
    string access_token = 3;
}

message CommandMetadata {
    string connection_id = 1;
    uint64 sequence = 2;
}
